Get files and send data

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <html>
 <head>
     <title>Page Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <form id="filesForm" action="http://localhost:3000/launchspy">
+        <div id="filesFormInner"></div>
+        <button type="submit" id="submitBtn" >submit</button>
+        <button type="reset" id="submitBtn" >reset</button>
+    </form>
 
     <script type="text/javascript" src="script.js"></script>
 </body>
