--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Page Title</title>
+    <title>Spy Gui</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
