environment selection working

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 <body>
     <form id="filesForm" action="http://localhost:3000/launchspy">
+        <div id="environmentsFormInner"></div>
         <div id="filesFormInner"></div>
         <button type="submit" id="submitBtn" >submit</button>
-        <button type="reset" id="submitBtn" >reset</button>
+        <button type="reset">reset</button>
     </form>
 
     <script type="text/javascript" src="script.js"></script>
