--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 
 <body>
     <form id="filesForm" action="http://localhost:3000/launchspy">
+        <h1>Select browser</h1>
         <div id="environmentsFormInner"></div>
-        <div id="filesFormInner"></div>
-        <button type="submit" id="submitBtn" >submit</button>
+        <h1>Select features</h1>
+        <div id="filesFormInner">
+            <input id="selectAll" checked="checked" type="radio" name="selectFolder" class="folderBtn" data-path="all" data-type="dir">
+            <label for="selectAll">select all</label>
+        </div>
+        <button type="submit" id="submitBtn" >run test</button>
         <button type="reset">reset</button>
     </form>
+    <div id="testRunningMsg" class="testRunningMsg" style="display: none">The test is running</div>
 
     <script type="text/javascript" src="script.js"></script>
 </body>
