remove duplicate tags & reset button

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <label for="selectAll">select all</label>
         </div>
         <button type="submit" id="submitBtn" >run test</button>
-        <button type="reset">reset</button>
+        <button type="reset" id="resetButton">reset</button>
     </form>
     <div id="testRunningMsg" class="testRunningMsg" style="display: none">The test is running</div>
 
