--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <form id="filesForm" action="http://localhost:3000/launchspy">
         <h1>Select browser</h1>
         <div id="environmentsFormInner"></div>
-        <!--<div id="tagsFormWrapper" style="display: none">-->
+        <div id="tagsFormWrapper" style="display: none">
             <h1>Select tag</h1>
             <div id="tagsFormInner">
                 <div class="tagsDropArea">
@@ -27,8 +27,11 @@
                         <ul></ul>
                     </div>
                 </div>
+                <div id="featuresSelected">
+                    <ul></ul>
+                </div>
             </div>
-        <!--</div>-->
+        </div>
         <h1>Select features</h1>
         <div id="filesFormInner">
             <input id="selectAll" checked="checked" type="radio" name="selectFolder" class="folderBtn" data-path="all" data-type="dir">
