Skinning and micro fixing

--- a/public/index.html
+++ b/public/index.html
@@ -11,36 +11,36 @@
     <div class="section">
         <h1>Select browser</h1>
         <input id="env_close" type="checkbox" class="closeBtn">
-        <label for="env_close" class="closeSection"><span><span class="openTxt">open</span><span class="closeTxt">close</span></span></label>
+        <label for="env_close" class="closeSection button"><span><span class="openTxt">open</span><span class="closeTxt">close</span></span></label>
         <div id="environmentsFormInner"></div>
     </div>
     <div id="tagsFormWrapper" style="display: none" class="section">
         <h1>Select tag</h1>
         <input id="tag_close" type="checkbox" class="closeBtn">
-        <label for="tag_close" class="closeSection"><span><span class="openTxt">open</span><span class="closeTxt">close</span></span></label>
+        <label for="tag_close" class="closeSection button"><span><span class="openTxt">open</span><span class="closeTxt">close</span></span></label>
         <div id="tagsFormInner">
-            <div class="tagsDropArea row">
+            <div class="tagsDropArea row fullCol tagListWrapper">
                 <h2>Tags list</h2>
-                <ul id="tagsList"></ul>
+                <ul id="tagsList" class="tagList"></ul>
             </div>
             <div class="tagsDropAreaWrapper row">
                 <div id="tagsIncluded" class="tagsDropArea halfCol">
                     <h2>Tags included</h2>
-                    <ul></ul>
+                    <ul class="tagList"></ul>
                 </div>
                 <div id="tagsExcluded" class="tagsDropArea halfCol">
                     <h2>Tags excluded</h2>
-                    <ul></ul>
+                    <ul class="tagList"></ul>
                 </div>
             </div>
             <div id="featuresSelected" class="row">
                 <div class="halfCol">
                     <h2>Features included</h2>
-                    <ul id="includedFeatures"></ul>
+                    <ul id="includedFeatures" class="featureList"></ul>
                 </div>
                 <div class="halfCol">
                     <h2>Features excluded</h2>
-                    <ul id="excludeddFeatures"></ul>
+                    <ul id="excludeddFeatures" class="featureList"></ul>
                 </div>
             </div>
         </div>
@@ -48,11 +48,11 @@
     <div class="section">
         <h1>Select features</h1>
         <input id="feature_close" type="checkbox" class="closeBtn">
-        <label for="feature_close" class="closeSection"><span><span class="openTxt">open</span><span class="closeTxt">close</span></span></label>
+        <label for="feature_close" class="closeSection button"><span><span class="openTxt">open</span><span class="closeTxt">close</span></span></label>
         <div id="filesFormInner">
             <input id="selectAll" checked="checked" type="radio" name="selectFolder" class="folderBtn" data-path="all"
                    data-type="dir">
-            <label for="selectAll">select all</label>
+            <label for="selectAll" class="button">select all</label>
         </div>
     </div>
     <button type="submit" id="submitBtn">run test</button>
