Features tu run recap

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,14 @@
             <label for="selectAll" class="button">select all</label>
         </div>
     </div>
+    <div class="section">
+        <input id="featureToRun_close" type="checkbox" class="closeBtn">
+        <label for="featureToRun_close" class="closeSection button"><span><span class="openTxt">open</span><span class="closeTxt">close</span></span></label>
+        <h1>Feature to run</h1>
+        <div>
+        <ul id="featuresToRun"></ul>
+        </div>
+    </div>
     <button type="submit" id="submitBtn">run test</button>
     <button type="reset" id="resetButton">reset</button>
 </form>
